card style working, will maybe switch to first style due to readability issues

--- a/client/src/Card.css
+++ b/client/src/Card.css
@@ -1,120 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Libre+Baskerville&display=swap');
-
-/* GLOBAL  */
-
-.App {
-    font-family: 'Libre Baskerville', serif;
-    background: rgb(236, 0, 0);
-    color: white;
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-    padding: 10px;
-}
-
-ul {
-    list-style: none;
-}
-
-li {
-    margin: 5px;
-}
-
-a {
-    text-decoration: none;
-    color: white;
-}
-
-li {
-    display: inline;
-}
-
-.flex-column {
-    display: flex;
-    flex-direction: column;
-    
-}
-
-.flex-row {
-    display: flex;
-    flex-direction: row;
-}
-
-.flex-wrap {
-    flex-wrap: wrap;
-}
-
-.centered {
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-}
-
-.flex1 {
-    flex: 1;
-}
-
-.flex2 {
-    flex: 2;
-}
-
-.flex4 {
-    flex: 4;
-}
-
-.flex6 {
-    flex: 6;
-}
-
-.flex8 {
-    flex: 8;
-}
-
-.flex9 {
-    flex: 9;
-}
-
-/* NAV SECTION  */
-
-.navBar {
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-}
-
-.navLogo {
-    max-width: 96px;
-}
-
-/* CONTENT  */
-
-.episodeCardContainer {
-    overflow: scroll;
-}
-
-.episodeCard {
-   border: 3px solid black;
-   border-radius: 5px;
-   width: 200px;
-   height: 48%;
-   margin: 5px;
-}
-
-.episodeImage {
-    max-width: 200px;
-    height: 200px;
-    object-fit: cover;
-}
-
-.episodeDetails {
-    font-size: .5em;
-}
-
-
-
-
-/* CARDS CARDS CARDS */
-
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:300,400,700);
 * {
   -webkit-box-sizing: border-box;
@@ -238,9 +121,125 @@ h1 {
           transform: translateY(-60px);
 }
 
+.example-1 .wrapper {
+  background: url(https://images.unsplash.com/photo-1496979551903-46e46589a88b?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=cda12b505afa1beb06e49d89014cbd65&auto=format&fit=crop&w=634&q=80) 20% 1%/cover no-repeat;
+}
+
+.example-1 .date {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #77d7b9;
+  color: #fff;
+  padding: 0.8em;
+}
+
+.example-1 .date span {
+  display: block;
+  text-align: center;
+}
+
+.example-1 .date .day {
+  font-weight: 700;
+  font-size: 24px;
+  text-shadow: 2px 3px 2px rgba(0, 0, 0, 0.18);
+}
+
+.example-1 .date .month {
+  text-transform: uppercase;
+}
+
+.example-1 .date .month,
+.example-1 .date .year {
+  font-size: 12px;
+}
+
+.example-1 .content {
+  background-color: #fff;
+  -webkit-box-shadow: 0 5px 30px 10px rgba(0, 0, 0, 0.3);
+          box-shadow: 0 5px 30px 10px rgba(0, 0, 0, 0.3);
+}
+
+.example-1 .title a {
+  color: gray;
+}
+
+.example-1 .menu-button {
+  position: absolute;
+  z-index: 999;
+  top: 16px;
+  right: 16px;
+  width: 25px;
+  text-align: center;
+  cursor: pointer;
+}
+
+.example-1 .menu-button span {
+  width: 5px;
+  height: 5px;
+  background-color: gray;
+  color: gray;
+  position: relative;
+  display: inline-block;
+  border-radius: 50%;
+}
+
+.example-1 .menu-button span::after, .example-1 .menu-button span::before {
+  content: '';
+  display: block;
+  width: 5px;
+  height: 5px;
+  background-color: currentColor;
+  position: absolute;
+  border-radius: 50%;
+}
+
+.example-1 .menu-button span::before {
+  left: -10px;
+}
+
+.example-1 .menu-button span::after {
+  right: -10px;
+}
+
+.example-1 .menu-content {
+  text-align: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: -1;
+  -webkit-transition: -webkit-transform 0.3s;
+  transition: -webkit-transform 0.3s;
+  transition: transform 0.3s;
+  transition: transform 0.3s, -webkit-transform 0.3s;
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+}
+
+.example-1 .menu-content li {
+  width: 33.333333%;
+  float: left;
+  background-color: #77d7b9;
+  height: 60px;
+  position: relative;
+}
+
+.example-1 .menu-content a {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  font-size: 24px;
+}
+
+.example-1 .menu-content span {
+  top: -10px;
+}
 
 .example-2 .wrapper {
-  
+  background: url(https://tvseriescritic.files.wordpress.com/2016/10/stranger-things-bicycle-lights-children.jpg) center/cover no-repeat;
 }
 
 .example-2 .wrapper:hover .menu-content span {
